Update git config, ghostty and skhd

--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,5 +1,5 @@
 # Appearance
-font-family = IosevkaTerm Nerd Font Mono
+font-family = Inconsolata LGC Nerd Font Mono
 background-opacity = 0.85
 background-blur-radius = 10
 
