--- a/dot_config/aerospace/aerospace.toml
+++ b/dot_config/aerospace/aerospace.toml
@@ -44,7 +44,7 @@ on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 # Also see: https://nikitabobko.github.io/AeroSpace/goodies#disable-hide-app
 automatically-unhide-macos-hidden-apps = true
 
-#on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
+# on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
 
 # Notify Sketchybar about workspace change
 exec-on-workspace-change = ['/bin/bash', '-c',
@@ -70,7 +70,7 @@ inner.horizontal = 4
 inner.vertical =   4 
 outer.left =       4
 outer.bottom =     4
-outer.top =        8
+outer.top =        [{monitor.dell = 36}, {monitor.secondary = 8}, 8]
 outer.right =      4 
 
 # 'main' binding mode declaration
@@ -137,7 +137,16 @@ cmd-7 = 'workspace 7'
 cmd-8 = 'workspace 8'
 cmd-9 = 'workspace 9'
 cmd-0 = 'workspace 10'
-
+cmd-ctrl-1 = 'workspace 11'
+cmd-ctrl-2 = 'workspace 12'
+cmd-ctrl-3 = 'workspace 13'
+cmd-ctrl-4 = 'workspace 14'
+cmd-ctrl-5 = 'workspace 15'
+cmd-ctrl-6 = 'workspace 16'
+cmd-ctrl-7 = 'workspace 17'
+cmd-ctrl-8 = 'workspace 18'
+cmd-ctrl-9 = 'workspace 19'
+cmd-ctrl-0 = 'workspace 20'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 cmd-shift-1 = 'move-node-to-workspace 1'
@@ -150,6 +159,42 @@ cmd-shift-7 = 'move-node-to-workspace 7'
 cmd-shift-8 = 'move-node-to-workspace 8'
 cmd-shift-9 = 'move-node-to-workspace 9'
 cmd-shift-0 = 'move-node-to-workspace 10'
+cmd-ctrl-shift-1 = 'move-node-to-workspace 11'
+cmd-ctrl-shift-2 = 'move-node-to-workspace 12'
+cmd-ctrl-shift-3 = 'move-node-to-workspace 13'
+cmd-ctrl-shift-4 = 'move-node-to-workspace 14'
+cmd-ctrl-shift-5 = 'move-node-to-workspace 15'
+cmd-ctrl-shift-6 = 'move-node-to-workspace 16'
+cmd-ctrl-shift-7 = 'move-node-to-workspace 17'
+cmd-ctrl-shift-8 = 'move-node-to-workspace 18'
+cmd-ctrl-shift-9 = 'move-node-to-workspace 19'
+cmd-ctrl-shift-0 = 'move-node-to-workspace 20'
+
+# See: https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
+[workspace-to-monitor-force-assignment]
+1 = 'main'
+2 = 'main'
+3 = 'main'
+4 = 'main'
+5 = 'main'
+6 = 'main'
+7 = 'main'
+8 = 'main'
+9 = 'main'
+10 = 'main'
+11 = ['secondary', 'main']
+12 = ['secondary', 'main']
+13 = ['secondary', 'main']
+14 = ['secondary', 'main']
+15 = ['secondary', 'main']
+16 = ['secondary', 'main']
+17 = ['secondary', 'main']
+18 = ['secondary', 'main']
+19 = ['secondary', 'main']
+20 = ['secondary', 'main']
+
+
+
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#fullscreen
 alt-f = 'fullscreen'
